application/odoo/deployment.yaml
# kubectl -n exercise apply -f deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  labels:
    app: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: odoo:17
        command: ["/bin/sh", "-c"]
        args: ["odoo -i base"]
        ports:
        - containerPort: 8069
        volumeMounts:
          - name: odoo-config-volume
            mountPath: /etc/odoo/odoo.conf
            subPath: odoo.conf
          - name: odoo-data
            mountPath: /var/lib/odoo
          - name: odoo-addons
            mountPath: /mnt/extra-addons
      volumes:
      - name: odoo-config-volume
        configMap:
          name: odoo-config
      - name: odoo-addons
        persistentVolumeClaim:
          claimName: odoo-addons-pvc
      - name: odoo-data
        persistentVolumeClaim:
          claimName: odoo-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: odoo
  labels:
    app: odoo
spec:
  selector:
    app: odoo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8069
